--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <meta name="viewport" content="initial-scale=1, width=device-width">
-        <title>studyhelp</title>
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="/static/style.css">
+    <title>study help</title>
+</head>
+<body>
+    <header>
+        
+    </header>
+    <main>
         {% block body %}{% endblock %}
-    </body>
+    </main>    
+</body>
 </html>
