--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,10 +10,21 @@
 </head>
 <body>
     <header>
-        
+        <div class="openbtn"><span></span><span></span><span></span></div>
+            <nav id="g-nav">
+                <ul>
+                    <li><a href="#">ホーム</a></li> 
+                    <li><a href="#">新しい教材を追加</a></li> 
+                    <li><a href="#">教材を削除</a></li> 
+                    <li><a href="#">学習の記録</a></li> 
+                    <li><a href="#">ログアウト</a></li> 
+                </ul>
+            </nav>
     </header>
     <main>
         {% block body %}{% endblock %}
     </main>    
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="/static/script.js"></script>
 </body>
 </html>
