--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,17 @@
-{% extends "layout.html" %}
-
-{% block body %}
-    <h1>Register</h1>
-
-    <form action="/register" method="post">
-        <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
-        <input autocomplete="off" autofocus name="password" placeholder="PASSWORD" type="text">
-        <input autocomplete="off" autofocus name="email" placeholder="email_adress" type="text">
-        <input type="submit" value="Register">
-    </form>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="/static/style.css">
+    <title>study help</title>
+</head>
+<body>
+    <header id="page_header" class="big_bg">
+        <h1 class="main_title">Study help</h1>
+        <h2 class="sub_title">見えるでサポート。</h2>
+    </header>    
+</body>
+</html>
