--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,7 @@
                     <li><a href="#">ログアウト</a></li> 
                 </ul>
             </nav>
+        <h1 class="page_title">Study help</h1>    
     </header>
     <main>
         {% block body %}{% endblock %}
