--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="/static/reset.css">
     <link rel="stylesheet" href="/static/style.css">
     <title>study help</title>
 </head>
 <body>
     <header id="page_header" class="big_bg">
         <h1 class="main_title">Study help</h1>
-        <h2 class="sub_title">見えるでサポート。</h2>
-    </header>    
+        <h2 class="sub_title">みえるでサポート。</h2>
+        <p class="header_sentence">成長は目に見えにくいもの。<br>Study helpはあなたの勉強を<br>わかりやすくサポートします。</p>
+    </header>
+    
+    <main id="page_main">
+        <h1 class="section_title">成長がみえる</h1>
+        <!-- アプリの画面をここに表示する -->
+        <p class="main_sentence">視覚的に勉強の進捗を<br>確認する事ができます。<br>目標や時間を設定できるので、<br>勉強の計画も立てやすいです。</p>
+    </main>
 </body>
 </html>
