--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,10 @@ body {
   font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体",
     "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
   text-align: center;
+  font-size: 20px;
+  line-height: 2em;
+  letter-spacing: 0.2rem;
+  color: #707070;
 }
 
 img {
@@ -116,7 +120,6 @@ img {
 
 /* headerここから */
 #page_header {
-  color: #707070;
   background-image: url(/static/メイン画像.jpeg);
   min-height: 100vh;
 }
@@ -130,9 +133,26 @@ img {
 .main_title {
   font-size: 46px;
   font-family: Klee;
+  padding-top: 33px;
 }
 
 .sub_title {
   font-size: 29px;
   margin-left: 25px;
+  padding-top: 30px;
+}
+
+.header_sentence {
+  padding-top: 180px;
+}
+/* headerここまで */
+/* mainここから */
+.section_title {
+  font-size: 30px;
+  padding-top: 40px;
+  font-weight: bold;
+}
+
+.main_sentence {
+  padding-top: 250px;
 }
