--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,20 @@
         <h1 class="section_title">成長がみえる</h1>
         <!-- アプリの画面をここに表示する -->
         <p class="main_sentence">視覚的に勉強の進捗を<br>確認する事ができます。<br>目標や時間を設定できるので、<br>勉強の計画も立てやすいです。</p>
+
+        <h1 class="section_title">教材ごとにみえる</h1>
+        <!-- アプリの画面をここに表示する -->
+        <p class="main_sentence">教材ごとに進み具合を<br>確認できます。<br>ページごとやセクションごとに<br>確認することもできるので<br>小さな目標設定も可能です。</p>
+
+        <h1 class="section_title">今すぐ始めよう</h1>
+        <div class="register_sec">
+            <div class="register_btn">
+                <a class="register_sentence" href="/register">会員登録</a>
+            </div>
+            <div class="login_btn">
+                <a class="login_sentence" href="/login">ログイン</a>
+            </div>
+        </div>    
     </main>
 </body>
 </html>
