--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,6 @@
 body {
   font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体",
     "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
-  text-align: center;
   font-size: 20px;
   line-height: 2em;
   letter-spacing: 0.2rem;
@@ -13,12 +12,14 @@ body {
 img {
   width: 100%;
 }
+
 /* layout.htmlここから */
 .page_title {
   text-align: center;
   font-family: Klee;
   font-size: 35px;
-  color: #707070;
+  padding-top: 30px;
+  letter-spacing: 0.1rem;
 }
 
 /* ナビゲーションここから */
@@ -68,11 +69,11 @@ img {
 .openbtn {
   position: fixed;
   z-index: 9999;
-  top: 10px;
-  /* right: 10px; */
+  top: 25px;
+  left: 10px;
   cursor: pointer;
   width: 50px;
-  height: 50px;
+  height: 70px;
 }
 
 .openbtn span {
@@ -122,6 +123,7 @@ img {
 #page_header {
   background-image: url(/static/メイン画像.jpeg);
   min-height: 100vh;
+  text-align: center;
 }
 
 .big_bg {
@@ -147,10 +149,14 @@ img {
 }
 /* headerここまで */
 /* mainここから */
-.section_title {
+.primary_title {
   font-size: 30px;
   padding-top: 40px;
   font-weight: bold;
+}
+
+#page_main {
+  text-align: center;
 }
 
 .main_sentence {
@@ -168,14 +174,14 @@ img {
 .register_btn {
   width: 160px;
   height: 80px;
-  background-image: url(/static/長方形\ 7.png);
+  background-image: url(/static/register_btn.png);
   cursor: pointer;
 }
 
 .login_btn {
   width: 160px;
   height: 80px;
-  background-image: url(/static/長方形\ 8.png);
+  background-image: url(/static/login_btn.png);
   cursor: pointer;
 }
 
@@ -187,4 +193,44 @@ img {
 .login_sentence {
   display: block;
   margin-top: 11px;
+}
+
+.register_bg {
+  background-image: url(/static/register_bg.jpeg);
+  min-height: 84vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 55px;
+}
+
+.sec_title {
+  font-size: 27px;
+  padding: 40px 0 0 34px;
+}
+
+.form {
+  background-color: snow;
+  border: 1px solid black;
+  margin: 27px 0 0 35px;
+  width: 277px;
+  height: 50px;
+}
+
+.label {
+  padding: 40px 0 0 35px;
+}
+
+.submit {
+  background-color: snow;
+  border-radius: 25px;
+  margin-left: 6px;
+  text-align: center;
+  background-color: transparent;
+  width: 140px;
+  height: 62px;
+}
+
+.form_btn {
+  margin: 0 auto;
+  margin-top: 48px;
 }
