--- a/static/style.css
+++ b/static/style.css
@@ -205,7 +205,6 @@ img {
 
 .sec_title {
   font-size: 27px;
-  padding: 40px 0 0 34px;
 }
 
 .form {
@@ -233,4 +232,50 @@ img {
 .form_btn {
   margin: 0 auto;
   margin-top: 48px;
+}
+
+.icon {
+  width: 32px;
+  height: 32px;
+}
+
+.title_sec {
+  display: flex;
+  border-bottom: solid 1px #74acac;
+  width: 318px;
+  margin-top: 15px;
+}
+
+.home_title {
+  font-size: 27px;
+  padding-left: 10px;
+  margin-bottom: 5px;
+}
+
+.text_image {
+  width: 100px;
+}
+
+.main_contents {
+  margin-top: 16px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.pie {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 110px;
+  height: 110px;
+  margin-right: 20px;
+  font-size: 16px;
+  font-weight: 700;
+  background-image: radial-gradient(#f2f2f2 30%, transparent 31%),
+    conic-gradient(#d5525f 0% 60%, #d9d9d9 0% 100%);
+  border-radius: 50%;
+}
+
+.main_container {
+  margin: 65px 0 0 21px;
 }
