--- a/static/style.css
+++ b/static/style.css
@@ -240,7 +240,6 @@ img {
 }
 
 .title_sec {
-  display: flex;
   border-bottom: solid 1px #74acac;
   width: 318px;
   margin-top: 15px;
@@ -252,12 +251,18 @@ img {
   margin-bottom: 5px;
 }
 
+.text_image_sec {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0 0 10px;
+}
+
 .text_image {
   width: 100px;
 }
 
 .main_contents {
-  margin-top: 16px;
+  margin-top: 30px;
   display: flex;
   justify-content: space-around;
 }
@@ -278,4 +283,26 @@ img {
 
 .main_container {
   margin: 65px 0 0 21px;
+}
+
+.image_sec {
+  position: relative;
+}
+
+.text_name {
+  letter-spacing: 0.02rem;
+  padding-top: 10px;
+}
+
+#mychart2 {
+  width: 240px;
+  height: 220px;
+}
+
+.chart_txt {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 50%;
 }
