--- a/templates/index.html
+++ b/templates/index.html
@@ -1,38 +1,10 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/reset.css">
-    <link rel="stylesheet" href="/static/style.css">
-    <title>study help</title>
-</head>
-<body>
-    <header id="page_header" class="big_bg">
-        <h1 class="main_title">Study help</h1>
-        <h2 class="sub_title">みえるでサポート。</h2>
-        <p class="header_sentence">成長は目に見えにくいもの。<br>Study helpはあなたの勉強を<br>わかりやすくサポートします。</p>
-    </header>
-    
-    <main id="page_main">
-        <h1 class="primary_title">成長がみえる</h1>
-        <!-- アプリの画面をここに表示する -->
-        <p class="main_sentence">視覚的に勉強の進捗を<br>確認する事ができます。<br>目標や時間を設定できるので、<br>勉強の計画も立てやすいです。</p>
+{% extends "base.html" %}
 
-        <h1 class="primary_title">教材ごとにみえる</h1>
-        <!-- アプリの画面をここに表示する -->
-        <p class="main_sentence">教材ごとに進み具合を<br>確認できます。<br>ページごとやセクションごとに<br>確認することもできるので<br>小さな目標設定も可能です。</p>
-
-        <h1 class="primary_title">今すぐ始めよう</h1>
-        <div class="register_sec">
-            <div class="register_btn">
-                <a class="register_sentence" href="/register">会員登録</a>
-            </div>
-            <div class="login_btn">
-                <a class="login_sentence" href="/login">ログイン</a>
-            </div>
-        </div>    
-    </main>
-</body>
-</html>
+{% block content %}
+<h1 class="title">
+  Flask Login Example
+</h1>
+<h2 class="subtitle">
+  Easy authentication and authorization in Flask.
+</h2>
+{% endblock %}
