--- a/templates/login.html
+++ b/templates/login.html
@@ -9,9 +9,9 @@
         <form action="/login" method="POST">
             <h1 class="sec_title">ログイン</h1>
             <p class="label">ユーザーネーム</p>
-            <input class="form" type="text" name="name" id="name">
+            <input class="login_form" type="text" name="name" id="name">
             <p class="label">パスワード</p>
-            <input class="form" type="password" name="password" id="password"><br>
+            <input class="login_form" type="password" name="password" id="password"><br>
             <div class="login_btn form_btn">
                 <input class="submit" type="submit" value="ログイン">
             </div>    
