--- a/static/style.css
+++ b/static/style.css
@@ -9,10 +9,6 @@ body {
   color: #707070;
 }
 
-img {
-  width: 100%;
-}
-
 /* layout.htmlここから */
 .page_title {
   text-align: center;
@@ -67,7 +63,7 @@ img {
 }
 
 .openbtn {
-  position: fixed;
+  position: absolute;
   z-index: 9999;
   top: 25px;
   left: 10px;
@@ -185,6 +181,14 @@ img {
   cursor: pointer;
 }
 
+.sec_btn {
+  object-fit: cover;
+  width: 160px;
+  height: 80px;
+  background-image: url(/static/btn.png);
+  cursor: pointer;
+}
+
 .register_sentence {
   display: block;
   margin-top: 11px;
@@ -207,7 +211,7 @@ img {
   font-size: 27px;
 }
 
-.form {
+.login_form {
   background-color: snow;
   border: 1px solid black;
   margin: 27px 0 0 35px;
@@ -222,7 +226,6 @@ img {
 .submit {
   background-color: snow;
   border-radius: 25px;
-  margin-left: 6px;
   text-align: center;
   background-color: transparent;
   width: 140px;
@@ -242,7 +245,8 @@ img {
 .title_sec {
   border-bottom: solid 1px #74acac;
   width: 318px;
-  margin-top: 15px;
+  margin: 60px 0 0 20px;
+  display: flex;
 }
 
 .home_title {
@@ -267,20 +271,6 @@ img {
   justify-content: space-around;
 }
 
-.pie {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 110px;
-  height: 110px;
-  margin-right: 20px;
-  font-size: 16px;
-  font-weight: 700;
-  background-image: radial-gradient(#f2f2f2 30%, transparent 31%),
-    conic-gradient(#d5525f 0% 60%, #d9d9d9 0% 100%);
-  border-radius: 50%;
-}
-
 .main_container {
   margin: 65px 0 0 21px;
 }
@@ -294,6 +284,7 @@ img {
   padding-top: 10px;
 }
 
+#mychart1,
 #mychart2 {
   width: 240px;
   height: 220px;
@@ -305,4 +296,122 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   height: 50%;
+}
+
+.textbook_container {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.textbook {
+  object-fit: cover;
+  width: 120px;
+  margin-bottom: 36px;
+}
+
+.textbook_form {
+  background-color: #d8d4d4;
+  margin-top: 21px;
+  width: 223px;
+  height: 41px;
+}
+
+.textbook_title {
+  font-size: 23px;
+  margin-top: 13px;
+}
+/* モーダルウインドウ */
+.btn img {
+  width: 120px;
+}
+
+.btn {
+  width: 45%;
+  margin-bottom: 15px;
+}
+
+.btn p {
+  letter-spacing: 0.05rem;
+  margin-left: 15px;
+}
+
+.modal {
+  display: none;
+  height: 100vh;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
+.modal__overlay {
+  background: rgba(0, 0, 0, 0.8);
+  height: 100vh;
+  position: absolute;
+  width: 100%;
+}
+.modal__content {
+  background: #fff;
+  left: 50%;
+  padding: 10px;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 317px;
+  height: 659px;
+  width: 100%;
+}
+.modal__content img {
+  max-width: 119px;
+  margin-top: 54px;
+  width: 100%;
+}
+.modal__content p {
+  display: inline-block;
+  font-size: 20px;
+  margin-top: 25px;
+}
+.modal__content a {
+  color: #000;
+  padding: 5px 10px;
+  text-align: right;
+}
+.fixed {
+  height: 100%;
+  position: fixed;
+  width: 100%;
+}
+
+.edit_sec {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+
+.edit_title {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.record_title {
+  margin-top: 10px;
+}
+
+.record_form {
+  background-color: #d8d4d4;
+  margin-top: 5px;
+  width: 223px;
+  height: 35px;
+}
+
+textarea {
+  background-color: #d8d4d4;
+  margin-top: 8px;
+}
+
+.record_btn {
+  margin: 0 auto;
+  margin-top: 15px;
 }
