--- a/templates/home.html
+++ b/templates/home.html
@@ -10,14 +10,14 @@
             <img class="icon" src="/static/鉛筆アイコン.png" alt="鉛筆アイコン">
             <h1 class="home_title">学習記録</h1>
         </div>
-
+        
         <div class="main_contents">
             <div class="text_image_sec">
                 <img class="text_image" src="/static/教材イメージ.png" alt="参考書の画像">
                 <p class="text_name">教材の名前</p>
             </div>
             <div class="image_sec">
-                <canvas id="mychart2">
+                <canvas id="mychart1">
                     
                 </canvas>
                 <p class="chart_txt">{{ number }}%</p>
@@ -33,7 +33,7 @@
                 <canvas id="mychart2">
                     
                 </canvas>
-                <p class="chart_txt">{{ number }}%</p>
+                <p class="chart_txt">{{ number2 }}%</p>
             </div>
         </div>
 
@@ -42,12 +42,31 @@
             <img class="icon" src="/static/タイマーアイコン.png" alt="タイマーアイコン">
             <h1 class="home_title">学習時間</h1>
         </div>
+
+        <div class="main_contents">
+            <canvas id="stage" height="200px"></canvas>
+        </div>
+
+        <div class="title_sec">
+            <img class="icon" src="/static/カレンダーアイコン.png" alt="カレンダーアイコン">
+            <h1 class="home_title">カレンダー</h1>
+        </div>
+
+        <div class="main_centents">
+            
+        </div>
+
+
+        
+        
     </div>    
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
     <script type="text/javascript">
-        const progress = {{number|tojson}};
+        const progress = {{ number }};
         const remaining = 100 - progress;
-        const ctx = document.getElementById("mychart2").getContext("2d");
+        const ctx = document.getElementById("mychart1").getContext("2d");
         const mychart = new Chart (ctx, {
             type: 'doughnut' ,
             data:{
@@ -72,5 +91,68 @@
             }
             });
             
+        const progress2 = {{ number2 }}
+        const remaining2 = 100 - progress2;
+        const ctx2 = document.getElementById("mychart2").getContext("2d");
+        const mychart2 = new Chart (ctx2, {
+        type: 'doughnut' ,
+        data:{
+        labels:["M","T"],
+        datasets:[{
+        backgroundColor:[
+        "#376892",
+        "#90aac1"
+        ],
+        borderWidth:[0,0],
+        borderColor:["#90aac1","#90aac1"],
+        data:[progress2,remaining2]
+        }]
+        },
+        options:{
+        legend:{
+        display:false
+        },
+        tooltips:{
+        enabled:false
+        }
+        }
+        });
+
+        var before = new Date(); //date関数が不要になる。
+        var week = [];
+        for (var i = 0; i < 7; i++) {
+        week.unshift(before.getDate() + '日');
+        before.setDate(before.getDate() - 1); //１日もどす
+        }
+        
+        var mydata = {
+        labels: [week[0], week[1], week[2], week[3], week[4], week[5], week[6]],
+        datasets: [
+            {
+            label: '勉強時間' ,   
+            hoverBackgroundColor: "rgba(255,99,132,0.3)",
+            data: [1, 0, 3, 1, 3, 2, 0],
+            }
+        ]
+        };
+
+        //「オプション設定」
+        var options = {
+        title: {    
+            display: true,
+            text: '学習記録'
+        }
+        };
+
+        var canvas = document.getElementById('stage');
+        var chart = new Chart(canvas, {
+
+        type: 'bar',  //グラフの種類
+        data: mydata,  //表示するデータ
+        options: options  //オプション設定
+
+        });
+
+        
     </script>
 {% endblock %}
